# Excel-Automation-with-Python

./: .gitignore  README.md  main.py  pyproject.toml  run_automation.bat  run_automation.command  run_reporter.py  sales_analysis_report.xlsx
.github/workflows/: build_linux_windows_mac_desktop_apps.yml  send_email.yml
input/: sales_feb.xlsx  sales_jan.xlsx  sales_mar.xlsx
logs/: .gitkeep  automation.log.2026-05-09  automation.log.2026-05-12
output/: merged_sales.xlsx  sales_analysis_report.xlsx
src/: calculations.py  clean_sort_data.py  gui.py  io_manager.py  mailer.py  notifications.py  visuals.py
