[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-automation-with-python"
version = "0.1.0"
description = "Professional Python tool to merge, clean, and analyze high-volume sales data."
readme = "README.md"
authors = [
  { name = "Joe Fanning" }
]
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "openpyxl",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com"
"Bug Tracker" = "https://github.com/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]




